--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.oda.oda.ui.LoginActivity">
+    tools:context="com.oda.ui.LoginActivity">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline6"
