--- a/app/src/main/res/layout/fragment_login_options.xml
+++ b/app/src/main/res/layout/fragment_login_options.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.oda.oda.ui.LoginActivity">
+    tools:context="com.oda.ui.LoginActivity">
 
     <Button
         android:id="@+id/button_loginfragment_createaccount"
