Add RxJava to handle firebase database

--- a/app/src/main/res/layout/fragment_complaint_form.xml
+++ b/app/src/main/res/layout/fragment_complaint_form.xml
@@ -7,7 +7,7 @@
 
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_complaint_form_send_complaint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
