Add GoogleMapFragment to find the complaint location

--- a/app/src/main/res/layout/complaint_form.xml
+++ b/app/src/main/res/layout/complaint_form.xml
@@ -115,7 +115,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button_address"/>
+            android:id="@+id/button_location_address"/>
     </TableRow>
 
     <TableRow>
