--- a/app/src/main/res/layout/fragment_complaint_record.xml
+++ b/app/src/main/res/layout/fragment_complaint_record.xml
@@ -10,10 +10,6 @@
         android:id="@+id/button_record_complaint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="@string/complaints_record_complaint"
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,17 +21,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.15" />
+        app:layout_constraintGuide_percent="0.13" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/custom_view_ligth_gray_color"
+        android:gravity="center_vertical|center_horizontal"
         android:text="@string/my_complaints"
+        android:textAlignment="center"
+        android:textSize="@dimen/form_title_16dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,12 +42,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25" />
+        app:layout_constraintGuide_percent="0.2" />
 
     <TableLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="25dp"
+        android:layout_margin="5dp"
+        android:background="@color/custom_view_background_gray_color"
         android:stretchColumns="*"
         app:layout_constraintTop_toBottomOf="@+id/guideline7"
         app:layout_constraintEnd_toEndOf="parent"
