--- a/app/src/main/res/layout/fragment_google_map.xml
+++ b/app/src/main/res/layout/fragment_google_map.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/custom_view_white_color">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
