--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,12 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="form_title_16dp">16dp</dimen>
+    <dimen name="form_margin_2dp">2dp</dimen>
+    <dimen name="form_margin_4dp">4dp</dimen>
+    <dimen name="custom_view_border_1dp">1dp</dimen>
+    <dimen name="custom_view_padding_10dp">10dp</dimen>
+    <dimen name="custom_view_padding_5dp">5dp</dimen>
+    <dimen name="custom_view_radius_5dp">5dp</dimen>
+    <dimen name="custom_view_padding_20dp">20dp</dimen>
 </resources>
